remove if sentences

--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -87,7 +87,7 @@
 <div class="container-fluid header-holder tutorials-header" id="header-holder">
   <div class="container">
     <div class="header-container">
-      <a class="header-logo" href="{{ theme_variables.external_urls['home'] }}" aria-label="{{ project }}" {%- if image_variables.external_urls['logo-dark'] %} style="background-image: url(_static/{{ image_variables.external_urls['logo-dark'] }})" {% endif %}></a>
+      <a class="header-logo" href="{{ theme_variables.external_urls['home'] }}" aria-label="{{ project }}" style="background-image: url(_static/{{ image_variables.external_urls['logo-dark'] }})"></a>
 
       <div class="main-menu">
         <ul>
@@ -285,7 +285,7 @@
   <footer class="site-footer">
     <div class="container footer-container">
       <div class="footer-logo-wrapper">
-        <a href="{{ theme_variables.external_urls['home'] }}" class="footer-logo" {%- if image_variables.external_urls['logo-icon'] %} style="background-image: url(_static/{{ image_variables.external_urls['logo-icon'] }})" {% endif %}></a>
+        <a href="{{ theme_variables.external_urls['home'] }}" class="footer-logo" style="background-image: url(_static/{{ image_variables.external_urls['logo-icon'] }})"></a>
       </div>
     </div>
   </footer>
@@ -298,7 +298,7 @@
     <div class="container-fluid">
       <div class="container">
         <div class="mobile-main-menu-header-container">
-          <a class="header-logo" href="{{ theme_variables.external_urls['home'] }}" aria-label="{{ project }}" {%- if image_variables.external_urls['logo'] %} style="background-image: url(_static/{{ image_variables.external_urls['logo'] }})" {% endif %}></a>
+          <a class="header-logo" href="{{ theme_variables.external_urls['home'] }}" aria-label="{{ project }}" style="background-image: url(_static/{{ image_variables.external_urls['logo'] }})"></a>
           <a class="main-menu-close-button" href="#" data-behavior="close-mobile-menu"></a>
         </div>
       </div>
