--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -7,8 +7,21 @@
   {%- set titlesuffix = "" %}
 {%- endif %}
 {%- set lang_attr = 'en' if language == None else (language | replace('_', '-')) %}
-{% import 'theme_variables.jinja' as theme_variables %}
-{% import 'image_variables.jinja' as image_variables %}
+{% from 'theme_variables.jinja' import external_urls as theme_variables %}
+{% from 'image_variables.jinja' import external_urls as image_variables %}
+
+{% macro get_image_var(name) -%}
+  url({{ pathto('_static/' + name, 1) }})
+{%- endmacro %}
+
+{% macro modify_theme_var(name) -%}
+  {{name}}{%- if not name.endswith('.html') and not name.startswith('http') and not name.startswith('www.') %}{%- if not name.endswith('/') and name|length>0 %}/{%- endif %}index{%- endif %}
+{%- endmacro %}
+
+{% macro get_theme_var(name) -%}
+{{ pathto(modify_theme_var(name)) }}
+{%- endmacro %}
+
 
 <!DOCTYPE html>
 <!--[if IE 8]><html class="no-js lt-ie9" lang="{{ lang_attr }}" > <![endif]-->
@@ -87,19 +100,19 @@
 <div class="container-fluid header-holder tutorials-header" id="header-holder">
   <div class="container">
     <div class="header-container">
-      <a class="header-logo" href="{{ theme_variables.external_urls['home'] }}" aria-label="{{ project }}" style="background-image: url(_static/{{ image_variables.external_urls['logo-dark'] }})"></a>
+      <a class="header-logo" href="{{ get_theme_var(theme_variables['home']) }}" aria-label="{{ project }}" style="background-image: {{ get_image_var(image_variables['logo-dark']) }}"></a>
 
       <div class="main-menu">
         <ul>
-          {%- if theme_variables.external_urls['items']|length > 0 %}
+          {%- if theme_variables['items']|length > 0 %}
           <li class="active docs-active">
             <div id="resourcesDropdownButton" data-toggle="resources-dropdown" class="resources-dropdown">
-              <a class="resource-option with-down-orange-arrow" href="{{ theme_variables.external_urls['docs'] }}">
+              <a class="resource-option with-down-orange-arrow" href="{{ pathto(root_doc) }}">
                 Docs
               </a>
               <div class="resources-dropdown-menu">
-                {%- for k,v in theme_variables.external_urls['items'].items() %}
-                <a class="doc-dropdown-option nav-dropdown-item" href="{{ v }}">
+                {%- for k,v in theme_variables['items'].items() %}
+                <a class="doc-dropdown-option nav-dropdown-item" href="{{ get_theme_var(v) }}">
                   <span class="dropdown-title">{{ k }}</span>
                   <p></p>
                 </a>
@@ -108,12 +121,12 @@
           </li>
           {% else %}
           <li>
-            <a href="{{ theme_variables.external_urls['docs'] }}">Docs</a>
+            <a href="{{ pathto(root_doc) }}">Docs</a>
           </li>
           {% endif %}
 
           <li>
-            <a href="{{ theme_variables.external_urls['github'] }}">GitHub</a>
+            <a href="{{ theme_variables['github'] }}">GitHub</a>
           </li>
         </ul>
       </div>
@@ -163,8 +176,7 @@
               toctree is empty. Skip building this for now.
             #}
             {% if 'singlehtml' not in builder %}
-              {% set global_toc = toctree(maxdepth=1,
-                                          collapse=theme_collapse_navigation|tobool,
+              {% set global_toc = toctree(collapse=theme_collapse_navigation|tobool,
                                           includehidden=theme_includehidden|tobool,
                                           titles_only=theme_titles_only|tobool) %}
             {% endif %}
@@ -275,7 +287,7 @@
         <div class="col-md-4 text-center">
           <h2>Docs</h2>
           <p>Access comprehensive developer documentation for {{ project }}</p>
-          <a class="with-right-arrow" href="{{ theme_variables.external_urls['docs'] }}">View Docs</a>
+          <a class="with-right-arrow" href="{{ pathto(root_doc) }}">View Docs</a>
         </div>
       </div>
     </div>
@@ -285,7 +297,7 @@
   <footer class="site-footer">
     <div class="container footer-container">
       <div class="footer-logo-wrapper">
-        <a href="{{ theme_variables.external_urls['home'] }}" class="footer-logo" style="background-image: url(_static/{{ image_variables.external_urls['logo-icon'] }})"></a>
+        <a href="{{ get_theme_var(theme_variables['home']) }}" class="footer-logo" style="background-image: {{ get_image_var(image_variables['logo-icon']) }}"></a>
       </div>
     </div>
   </footer>
@@ -298,7 +310,7 @@
     <div class="container-fluid">
       <div class="container">
         <div class="mobile-main-menu-header-container">
-          <a class="header-logo" href="{{ theme_variables.external_urls['home'] }}" aria-label="{{ project }}" style="background-image: url(_static/{{ image_variables.external_urls['logo'] }})"></a>
+          <a class="header-logo" href="{{ get_theme_var(theme_variables['home']) }}" aria-label="{{ project }}" style="background-image: {{ get_image_var(image_variables['logo']) }}"></a>
           <a class="main-menu-close-button" href="#" data-behavior="close-mobile-menu"></a>
         </div>
       </div>
@@ -308,21 +320,21 @@
       <div class="main-menu">
         <ul>
 
-          <li class="resources-mobile-menu-title" class="active" href="{{ theme_variables.external_urls['docs'] }}">
+          <li class="resources-mobile-menu-title" class="active" href="{{ pathto(root_doc) }}">
             Docs
           </li>
-          {%- if theme_variables.external_urls['items']|length > 0 %}
+          {%- if theme_variables['items']|length > 0 %}
           <ul class="resources-mobile-menu-items">
-            {%- for k,v in theme_variables.external_urls['items'].items() %}
+            {%- for k,v in theme_variables['items'].items() %}
             <li>
-              <a href="{{ v }}">{{ k }}</a>
+              <a href="{{ get_theme_var(v) }}">{{ k }}</a>
             </li>
             {%- endfor %}
           </ul>
           {% endif %}
 
           <li>
-            <a href="{{ theme_variables.external_urls['github'] }}">GitHub</a>
+            <a href="{{ theme_variables['github'] }}">GitHub</a>
           </li>
         </ul>
       </div>
