--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -277,7 +277,11 @@
       });
   </script>
 
-  {%- block footer %} {% endblock %}
+  {%- block footer %}
+  <script script type="text/javascript">
+    var collapsedSections = {{ theme_variables['collapsedSections'] }};
+  </script>
+  {% endblock %}
 
   <!-- Begin Footer -->
 
