--- a/trojanzoo_sphinx_theme/footer.html
+++ b/trojanzoo_sphinx_theme/footer.html
@@ -45,7 +45,7 @@
   {%- if show_sphinx %}
     {% trans %}
       <div>
-        Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/rtfd/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
+        Built with <a href="http://sphinx-doc.org/">Sphinx</a> using <a href="https://github.com/ain-soph/trojanzoo_sphinx_theme">trojanzoo_sphinx_theme</a> (modified from  <a href="https://github.com/ain-soph/pytorch_sphinx_theme">pytorch_sphinx_theme</a>).
       </div>
     {% endtrans %}
   {%- endif %}
