--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -138,7 +138,7 @@ url({{ pathto('_static/' + name, 1) }})
           </li>
 
           <li>
-            <a href="{{ theme_variables['github'] }}">GitHub</a>
+            <a href="{{ get_theme_var(theme_variables['github']) }}">GitHub</a>
           </li>
         </ul>
       </div>
@@ -361,7 +361,7 @@ url({{ pathto('_static/' + name, 1) }})
           </ul>
           {% endif %}
           <li>
-            <a href="{{ theme_variables['github'] }}">GitHub</a>
+            <a href="{{ get_theme_var(theme_variables['github']) }}">GitHub</a>
           </li>
         </ul>
       </div>
