fix github link

--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -150,7 +150,7 @@ url({{ pathto('_static/' + name, 1) }})
           </li>
 
           <li>
-            <a href="{{ get_theme_var(theme_variables['github']) }}">GitHub</a>
+            <a href="{{ get_github_addr(theme_variables['github']) }}">GitHub</a>
           </li>
         </ul>
       </div>
@@ -373,7 +373,7 @@ url({{ pathto('_static/' + name, 1) }})
           </ul>
           {% endif %}
           <li>
-            <a href="{{ get_theme_var(theme_variables['github']) }}">GitHub</a>
+            <a href="{{ get_github_addr(theme_variables['github']) }}">GitHub</a>
           </li>
         </ul>
       </div>
