--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -7,32 +7,6 @@
 {%- set titlesuffix = "" %}
 {%- endif %}
 {%- set lang_attr = 'en' if language == None else (language | replace('_', '-')) %}
-{% from 'theme_variables.jinja' import external_urls as theme_variables %}
-{% from 'image_variables.jinja' import external_urls as image_variables %}
-
-{% macro get_image_var(name) -%}
-{%- if ":" in name %}
-url({{ name }})
-{%- else %}
-url({{ pathto('_static/' + name, 1) }})
-{%- endif %}
-{%- endmacro %}
-
-{% macro get_theme_var(name) -%}
-{%- if ":" in name %}
-{{ name }}
-{%- else %}
-{{ pathto(name, 1) }}
-{%- endif %}
-{%- endmacro %}
-
-{% macro get_github_addr(name) -%}
-{%- if name.removesuffix('/').count('/')>1 %}
-{{ name }}
-{%- else %}
-{{ "https://www.github.com/" + name }}
-{%- endif %}
-{%- endmacro %}
 
 
 <!DOCTYPE html>
@@ -117,26 +91,26 @@ url({{ pathto('_static/' + name, 1) }})
 <div class="container-fluid header-holder tutorials-header" id="header-holder">
   <div class="container">
     <div class="header-container">
-      <a class="header-logo" href="{{ get_theme_var(theme_variables['home']) }}" aria-label="{{ project }}"
-        style="background-image: {{ get_image_var(image_variables['logo-dark']) }}"></a>
+      <a class="header-logo" href="{{ theme_home_url }}" aria-label="{{ project }}"
+        style="background-image: url({{ theme_logo_dark_url }})"></a>
       <div class="main-menu">
         <ul>
           <li>
-            <a href="{{ get_theme_var(theme_variables['home']) }}">Home</a>
+            <a href="{{ theme_home_url }}">Home</a>
           </li>
 
           <li class="active docs-active">
-            {%- if theme_variables['items']|length > 0 %}
+            {%- if theme_doc_items|length > 0 %}
             <div id="resourcesDropdownButton" data-toggle="resources-dropdown" class="resources-dropdown">
               <a class="resource-option with-down-orange-arrow">
                 Docs
               </a>
               <div class="resources-dropdown-menu">
-                {%- for k, v in theme_variables['items'].items() %}
+                {%- for k, v in theme_doc_items.items() %}
                   {%- if k == (docstitle|striptags|e).split(' ')[0] %}
-                  <a class="doc-dropdown-option nav-dropdown-item active" href="{{ get_theme_var(v) }}">
+                  <a class="doc-dropdown-option nav-dropdown-item active" href="{{ v }}">
                   {%- else %}
-                  <a class="doc-dropdown-option nav-dropdown-item" href="{{ get_theme_var(v) }}">
+                  <a class="doc-dropdown-option nav-dropdown-item" href="{{ v }}">
                   {%- endif %}
                   <span class="dropdown-title">{{ k }}</span>
                   <p></p>
@@ -150,7 +124,7 @@ url({{ pathto('_static/' + name, 1) }})
           </li>
 
           <li>
-            <a href="{{ get_github_addr(theme_variables['github']) }}">GitHub</a>
+            <a href="{{ theme_github_url }}">GitHub</a>
           </li>
         </ul>
       </div>
@@ -305,7 +279,7 @@ url({{ pathto('_static/' + name, 1) }})
 
   {%- block footer %}
   <script script type="text/javascript">
-    var collapsedSections = {{ theme_variables['collapsedSections'] }};
+    var collapsedSections = {{ theme_collapsedSections }};
   </script>
   {% endblock %}
 
@@ -327,8 +301,8 @@ url({{ pathto('_static/' + name, 1) }})
   <footer class="site-footer">
     <div class="container footer-container">
       <div class="footer-logo-wrapper">
-        <a href="{{ get_theme_var(theme_variables['home']) }}" class="footer-logo"
-          style="background-image: {{ get_image_var(image_variables['logo-icon']) }}"></a>
+        <a href="{{ theme_home_url }}" class="footer-logo"
+          style="background-image: url({{ theme_logo_icon_url }})"></a>
       </div>
     </div>
   </footer>
@@ -341,8 +315,8 @@ url({{ pathto('_static/' + name, 1) }})
     <div class="container-fluid">
       <div class="container">
         <div class="mobile-main-menu-header-container">
-          <a class="header-logo" href="{{ get_theme_var(theme_variables['home']) }}" aria-label="{{ project }}"
-            style="background-image: {{ get_image_var(image_variables['logo']) }}"></a>
+          <a class="header-logo" href="{{ theme_home_url }}" aria-label="{{ project }}"
+            style="background-image: url({{ theme_logo_url }})"></a>
           <a class="main-menu-close-button" href="#" data-behavior="close-mobile-menu"></a>
         </div>
       </div>
@@ -353,27 +327,27 @@ url({{ pathto('_static/' + name, 1) }})
         <ul>
 
           <li>
-            <a href="{{ get_theme_var(theme_variables['home']) }}">Home</a>
+            <a href="{{ theme_home_url }}">Home</a>
           </li>
 
           <li class="active resources-mobile-menu-title">
             <a href="{{ url_root }}">Docs</a>
           </li>
-          {%- if theme_variables['items']|length > 0 %}
+          {%- if theme_doc_items|length > 0 %}
           <ul class="resources-mobile-menu-items">
-            {%- for k, v in theme_variables['items'].items() %}
+            {%- for k, v in theme_doc_items.items() %}
               {%- if k == (docstitle|striptags|e).split(' ')[0] %}
               <li class="active">
               {%- else %}
               <li>
               {%- endif %}
-              <a href="{{ get_theme_var(v) }}">{{ k }}</a>
+              <a href="{{ v }}">{{ k }}</a>
             </li>
             {%- endfor %}
           </ul>
           {% endif %}
           <li>
-            <a href="{{ get_github_addr(theme_variables['github']) }}">GitHub</a>
+            <a href="{{ theme_github_url }}">GitHub</a>
           </li>
         </ul>
       </div>
