--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -145,7 +145,7 @@
     <a href="#" class="toggle-table-of-contents" data-behavior="toggle-table-of-contents"></a>
   </div>
 
-  <nav data-toggle="wy-nav-shift" class="sphinx-template-left-menu" id="sphinx-template-left-menu">
+  <nav data-toggle="sphinx-template-nav-shift" class="sphinx-template-left-menu" id="sphinx-template-left-menu">
     <div class="sphinx-template-side-scroll">
       <div class="sphinx-template-menu sphinx-template-menu-vertical" data-spy="affix" role="navigation"
         aria-label="main navigation">
@@ -201,7 +201,7 @@
       </div>
     </div>
 
-    <section data-toggle="wy-nav-shift" id="sphinx-template-content-wrap" class="sphinx-template-content-wrap">
+    <section data-toggle="sphinx-template-nav-shift" id="sphinx-template-content-wrap" class="sphinx-template-content-wrap">
       <div class="sphinx-template-content-left">
 
         {%- block content %}
