remove tutorial related things

--- a/trojanzoo_sphinx_theme/layout.html
+++ b/trojanzoo_sphinx_theme/layout.html
@@ -88,7 +88,7 @@
     integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 </head>
 
-<div class="container-fluid header-holder tutorials-header" id="header-holder">
+<div class="container-fluid header-holder docs-header" id="header-holder">
   <div class="container">
     <div class="header-container">
       <a class="header-logo" href="{{ theme_home_url }}" aria-label="{{ project }}"
@@ -285,7 +285,7 @@
 
   <!-- Begin Footer -->
 
-  <div class="container-fluid docs-tutorials-resources" id="docs-tutorials-resources">
+  <div class="container-fluid docs-resources" id="docs-resources">
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center">
